@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-99: Make AdjacencyListVertexReader and its constructor public.
+  (Kohei Ozaki via jghoman)
+
   GIRAPH-98: Add Claudio Martella to site. (claudio)
 
   GIRAPH-97: TestIdWithValueTextOutputFormat.java and 
